import outdent from 'outdent';
import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		outdent`
			@keyframes fade {
				to { opacity: 1; }
			}
			a { animation-name: fade; }
		`,
		outdent`
			a { animation: 1s ease fade; }
			@keyframes fade {
				to { opacity: 1; }
			}
		`,
		outdent`
			a { animation: fade 1s, slide 2s; }
			@keyframes fade {}
			@keyframes slide {}
		`,
		'@keyframes fade {} a { animation-name: "fade"; }',
		'@keyframes "fade" {} a { animation-name: fade; }',
		'@keyframes --fade {} a { animation-name: --fade; }',
		'@keyframes "fade" {} a { animation: 1s "fade"; }',
		'@keyframes "none" {} a { animation-name: "none"; }',
		'@keyframes "inherit" {} a { animation-name: "inherit"; }',
		'@keyframes "default" {} a { animation-name: "default"; }',
		String.raw`@keyframes f\61 de {} a { animation-name: fade; }`,
		String.raw`@keyframes fade {} a { animation-name: f\61 de; }`,
		String.raw`@keyframes "f\61 de" {} a { animation-name: fade; }`,
		String.raw`@keyfr\61 mes fade {} a { anim\61 tion-name: fade; }`,
		'@KEYFRAMES fade {} a { ANIMATION-NAME: fade; }',
		'@keyframes ease-out {} a { animation: ease-in ease-out; }',
		'@keyframes backwards {} a { animation: 3s none backwards; }',
		'@keyframes Fade {} a { animation-name: Fade; }',
		'@-webkit-keyframes fade {} a { animation-name: fade; }',
		'@-moz-keyframes fade {} a { animation-name: fade; }',
		'@-o-keyframes fade {} a { animation-name: fade; }',
		outdent`
			@media (prefers-reduced-motion: no-preference) {
				@keyframes fade {}
			}
			a {
				&:hover { animation-name: fade; }
			}
		`,
		'a { animation: none; }',
		'a { animation-name: none; }',
		'a { animation-name: inherit; }',
		String.raw`a { animation-name: \69 nherit; animation: 1s \6e one; }`,
		'a { animation: 1s ease infinite alternate both paused; }',
		'a { animation: infinite 2; }',
		'a { animation: ease steps(2); }',
		String.raw`a { animation: \69 nfinite 2; }`,
		'a { animation: --timeline; }',
		// Ambiguous shorthand interpretation is a documented best-effort limitation.
		'a { animation: backwards none --missing; }',
		'@keyframes --fade {} a { animation: --timeline --fade; }',
		String.raw`a { animation: \65 ase var(--duration); }`,
		'a { animation: var(--value) ease; } b { animation: var(--value) --timeline; }',
		'a { animation-name: var(--animation); }',
		'a { animation-name: var(--animation, missing); }',
		'a { animation: var(--animation, missing 1s ease); }',
		'@keyframes fade {} a { animation: fade var(--duration); }',
		'@keyframes fade {} a { animation-name: fade, var(--animation); }',
		'@keyframes ease-out {} a { animation: ease-in ease-out, var(--animation); }',
		'a { -webkit-animation-name: missing; -moz-animation: missing 1s; -o-animation-name: missing; }',
		'@supports (animation-name: missing) { a { color: red; } }',
		'a { transition-property: missing; --animation-name: missing; }',
		'a { animation-name: ""; }',
		'@keyframes fade {} a { animation: fade 1s both; }',
		'@keyframes fade {} a { animation: 1s ease 2s 3 infinite alternate both running fade; }',
		'@keyframes "My Animation" {} a { animation: 1s "My Animation"; }',
		'@keyframes My_Animation {} a { animation-name: My_Animation; }',
		'@keyframes fade {} a { animation-name: fade, fade; }',
		'@keyframes -x-fade {} a { animation-name: -x-fade; }',
		'a { animation: 1s ease-in-out; }',
		'@keyframes fade {} a { animation: 1s var(--name, fade); }',
		'@keyframes fade {} a { animation-name: fade !important; }',
		'@media screen { @keyframes fade {} a { animation-name: fade; } }',
		'@keyframes fade {} @keyframes slide {} a { animation: fade 1s, slide 2s; }',
	],
	invalid: [
		'a { animation-name: missing; }',
		'a { animation-name: --missing; }',
		'a { animation: missing 1s ease; }',
		'a { animation: --timeline --missing; }',
		outdent`
			a { animation-name: fade, missing; }
			@keyframes fade {}
		`,
		'a { animation-name: missing, missing; }',
		outdent`
			a { animation-name: Fade; }
			@keyframes fade {}
		`,
		'a { animation-name: "missing"; }',
		'a { animation: 1s "missing"; }',
		'a { animation-name: ease; }',
		String.raw`a { animation-name: m\69 ssing; }`,
		String.raw`a { anim\61 tion-name: missing; }`,
		outdent`
			a {
				&:hover { animation-name: missing; }
			}
		`,
		'a { animation: missing var(--duration); }',
		'a { animation: "missing,animation" var(--duration, 1s); }',
		'a { animation-name: missing, var(--animation); }',
		'a { animation: ease-in ease-out; }',
		'a { animation: reverse alternate, paused running; }',
		'a { animation: auto 1s 2s none backwards; }',
		'a { animation: 2 infinite; }',
		'a { animation: 1s --timeline auto; }',
		String.raw`a { animation: st\65 ps(2) ease; }`,
		String.raw`a { animation: 1\73  ease-in ease-out; }`,
		'a { animation: ease-in ease-out, var(--animation); }',
		'a { animation: 3s none backwards; }',
		'a { animation: missing 100px; }',
		'@keyframes none {} a { animation-name: "none"; }',
		'@keyframes inherit {} a { animation-name: "inherit"; }',
		'@keyframes default {} a { animation-name: "default"; }',
		String.raw`@keyframes \69 nherit {} a { animation-name: "inherit"; }`,
		'@keyframes fade; a { animation-name: fade; }',
		'@keyframes fade extra {} a { animation-name: fade; }',
		'@Keyframes fade {} a { animation-name: fade; }',
		'@-ms-keyframes fade {} a { animation-name: fade; }',
		'@-custom-keyframes fade {} a { animation-name: fade; }',
		'@supports (animation-name: ignored) { a { animation-name: missing; } }',
		'a { animation: 1s ease-in-out missing; }',
		'@media screen { a { animation-name: missing; } }',
		'a { animation-name: "Fade"; } @keyframes fade {}',
		'a { animation: missing, slide; } @keyframes slide {}',
		'a { animation: 1s missing, fade 2s; } @keyframes fade {}',
		'a { animation-name: missing !important; }',
	],
});

// A bare `auto` or `none` fills the `<single-animation-timeline>` slot first, `global` is not a timeline keyword
test.snapshot({
	valid: [
		'a { animation: auto 1s; }',
		'a { animation: none 1s; }',
		'@keyframes global {} a { animation: global 1s; }',
	],
	invalid: [
		'a { animation: fade 1s; }',
		'a { animation: globalFade 1s; }',
		'a { animation: global 1s; }',
		'a { animation-name: auto; }',
	],
});
